--- a/src/pa-page-detail.html
+++ b/src/pa-page-detail.html
@@ -1,13 +1,25 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
 <link rel="import" href="../bower_components/app-route/app-route.html">
-<link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-item/paper-item-body.html">
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-document.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-query.html">
 
 <dom-module id="pa-page-detail">
   <template>
+    <style include="shared-styles">
+      paper-fab {
+          position: fixed;
+          right: 24px;
+          bottom: 32px;          
+      }
+    </style>
+
     <app-route route="[[route]]" pattern="/:id" data="{{routeData}}"></app-route>
 
     <firebase-document
@@ -30,6 +42,16 @@
         </paper-item-body>
       </paper-item>
     </template>
+    <paper-fab icon="app:attach-money" label="Invest" title="Invest"
+      onclick="investDialog.open()">
+    </paper-fab>
+    <paper-dialog id="investDialog">
+      <h2>How much to invest?</h2>
+      <paper-input type="number" label="Amount">
+        <div prefix>€&nbsp;</div>
+      </paper-input>
+      <paper-button onclick="investDialog.close()">Invest</paper-button>
+    </paper-dialog>
   </template>
   <script>
     Polymer({
