adds analytics page stub

--- a/src/psk-app.html
+++ b/src/psk-app.html
@@ -35,7 +35,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="pa-page-home.html">
 <link rel="import" href="pa-page-list.html">
 <link rel="import" href="pa-page-detail.html">
-<!-- <link rel="import" href="pa-page-analytics.html"> -->
+<link rel="import" href="pa-page-analytics.html">
 
 <dom-module id="psk-app">
   <template>
