--- a/src/pa-page-home.html
+++ b/src/pa-page-home.html
@@ -12,7 +12,7 @@
     <h2 class="page-title">Home</h2>
     <ul>
       <li><a data-page="list" href="/list"><h1>Where to invest?</h1></a></li>
-      <li><a data-page="analytics" href="/analitics"><h1>Analytics</h1></a></li>
+      <li><a data-page="analytics" href="/analytics"><h1>Analytics</h1></a></li>
     </ul>
   </template>
   <script>
