adds overview page

--- a/src/pa-page-detail.html
+++ b/src/pa-page-detail.html
@@ -42,7 +42,7 @@
         </paper-item-body>
       </paper-item>
     </template>
-    <paper-fab icon="app:attach-money" label="Invest" title="Invest"
+    <paper-fab icon="app:attach-money" label="€" title="Invest"
       onclick="investDialog.open()">
     </paper-fab>
     <paper-dialog id="investDialog">
