adds tabs routing

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
-    <link rel="import" href="/src/psk-app.html">
+    <link rel="import" href="/src/pa-app.html">
   </head>
 
   <body>
 
-    <psk-app></psk-app>
+    <pa-app></pa-app>
 
     <script>
       // Load webcomponentsjs polyfill if browser does not support native Web Components
