--- a/src/pa-list-item.html
+++ b/src/pa-list-item.html
@@ -18,7 +18,7 @@
         background: var(--paper-amber-500);
       }
     </style>
-    <a class="link" href="/detail/[[item.id]]">
+    <a class="link" href="/detail/list/[[item.id]]">
       <paper-icon-item>
         <div class="avatar" item-icon></div>
         <paper-item-body three-line>
