--- a/src/pa-page-offers.html
+++ b/src/pa-page-offers.html
@@ -2,7 +2,7 @@
 <link rel="import" href="shared-styles.html">
 <link rel="import" href="pa-list-item.html">
 
-<dom-module id="pa-page-entities">
+<dom-module id="pa-page-offers">
   <template>
     <style include="shared-styles">
       :host {
@@ -17,11 +17,11 @@
   </template>
   <script>
     Polymer({
-      is: 'pa-page-entities',
+      is: 'pa-page-offers',
       properties: {
         list: Object,
         title: {
-          value: 'Entities',
+          value: 'Offers',
           notify: true
         }
       }
