--- a/src/pa-list-item-offer.html
+++ b/src/pa-list-item-offer.html
@@ -18,17 +18,29 @@
         background: var(--paper-amber-500);
       }
     </style>
-    <paper-icon-item>
-      <div class="avatar" item-icon></div>
-      <paper-item-body two-line>
-        <div>[[item.n]]</div>
-        <div secondary>[[item.t]]</div>
-      </paper-item-body>
-    </paper-icon-item>
+    <a class="link" href="/detail/list/[[item.id]]">
+      <paper-icon-item>
+        <div class="avatar" item-icon></div>
+        <paper-item-body three-line>
+          <div>[[item.type]]</div>
+          <div secondary>[[item.date]]</div>
+          <div secondary>[[item.term]]</div>
+        </paper-item-body>
+        <paper-item-body three-line>
+          <div>€ [[item.balance]]</div>
+          <div secondary>€ [[item.amount]]</div>
+          <div secondary>€ [[item.available]]</div>
+        </paper-item-body>
+        <paper-item-body two-line>
+          <div>[[item.rate]]%</div>
+          <div secondary>[[item.originator]]</div>
+        </paper-item-body>
+      </paper-icon-item>
+    </a>
   </template>
   <script>
     Polymer({
-      is: 'pa-list-item',
+       is: 'pa-list-item',
 
       properties: {
         item: Object
