in debug process

--- a/src/pa-page-resource.html
+++ b/src/pa-page-resource.html
@@ -81,6 +81,7 @@
         this.set('subrouteData.tab', tab);
       },
       _tabRouteChanged: function(tab) {
+        console.log(tab);
         this.selectedTab = tab;
       },
       _log(v) {
